Added styling borders

--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
                 <hr size="5px">
                 <!-- CONTACT -->
                 <div class="contact">
-                        <h4>Contact Me <i class="fa-solid fa-phone-rotary"></i></h4>
+                        <h3>Contact Me <i class="fa-solid fa-phone-rotary"></i></h3>
                         <ul>
                             <li>+961 71491001 <a href="https://whatsapp.com" target="_blank">
                                 <i class="fa-solid fa-phone"></i>
@@ -45,6 +45,7 @@
                         <li>Problem solving and decision making.</li>
                         <li>Highly adaptable, work well on my own as well as in a team.</li>
                 </div>
+                <hr size="5px">
                 <!-- HOBBIES -->
                 <div class="hobbies">
                     <h3>Hobbies</h3>
@@ -62,6 +63,7 @@
                     </span>
                     </ul>
                 </div>
+                <hr size="5px">
             </div>
 <!------------------------RIGHT GRID ---------------------------->
             <div class="grid-item grid-item-2">
