Added Assets Directory + Changed Grid to Flex

--- a/Index.html
+++ b/Index.html
@@ -8,11 +8,11 @@
         <link rel="stylesheet" href="CV-Styling.css">
     </head>
     <body>
-        <div class="grid-container">
+        <div class="flex-container">
 <!------------------------LEFT GRID---------------------------->
-            <div class="grid-item grid-item-1">
+            <div class="flex-item-1">
                 <div class="Profile">
-                    <img src="Profile Picture.jpg">
+                    <img src="assets/Pictures/Profile Picture.jpg">
                     <div class="prof">
                         <h2>Ali Olliek</h2>
                         <h3>Agricultural Engineer/</h3>
@@ -66,7 +66,7 @@
                 <hr size="5px">
             </div>
 <!------------------------RIGHT GRID ---------------------------->
-            <div class="grid-item grid-item-2">
+            <div class="flex-item-2">
                 <!-- INTRO -->
                 <div class="introduction">
                     <h2>Introduction</h2>
